<resources>
    <string name="app_name">Simple Calculator</string>

    <string name="start_value">0</string>

    <string name="cal_btn_1">1</string>
    <string name="cal_btn_2">2</string>
    <string name="cal_btn_3">3</string>
    <string name="cal_btn_4">4</string>
    <string name="cal_btn_5">5</string>
    <string name="cal_btn_6">6</string>
    <string name="cal_btn_7">7</string>
    <string name="cal_btn_8">8</string>
    <string name="cal_btn_9">9</string>
    <string name="cal_btn_0">0</string>
    <string name="cal_btn_point">.</string>
    <string name="cal_btn_plus">+</string>
    <string name="cal_btn_minus">-</string>
    <string name="cal_btn_multiply">*</string>
    <string name="cal_btn_divide">/</string>
    <string name="cal_btn_equal">=</string>
    <string name="cal_btn_delete">C</string>
</resources>